Fix pagination controls not showing/hiding correctly

--- a/css/main.css
+++ b/css/main.css
@@ -107,7 +107,7 @@ select:hover {
 }
 
 .hidden {
-  display: none;
+  display: none !important;
 }
 
 @media only screen and (max-width: 600px) {
